tests/NormalTests/paczka1/fuzzy1/15731066.err
Error in line 25: zQ0YquZf S740 250,0
Error in line 30: zQ0YquZf S656 66,6
